SERVER-105506 Explaining a find fails over viewless timeseries collections on a sharded cluster (#37331)

GitOrigin-RevId: 8d5613edfcf1497accf32d17af5a14be24e95ca4