jstests/core/timeseries/ddl/timeseries_metric_index_2dsphere.js
@@ -13,8 +13,6 @@
  *   does_not_support_stepdowns,
  *   # We need a timeseries collection.
  *   requires_timeseries,
- *   # TODO (SERVER-105506): Remove when explain() works for viewless timeseries on sharded clusters
- *   viewless_timeseries_bug,
  * ]
  */
 
